test: item-web, item-core, item 모듈에 given-when-then 적용